# devbits

./: LICENSE  README.md  pyproject.toml
devbits/: __init__.py  cache.py  cli.py  gui.py  image.py  media.py  network.py  project.py  scripts.py  utils.py
tests/: test_cli.py  test_gui_cli.py
