[project]
name = "devbits"
version = "0.1.3"
description = "A lightweight CLI toolkit for daily development utilities."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Bruce Chuang" }
]
dependencies = [
  "opencv-python>=4.8.0",
  "pillow>=10.0.0",
  "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/<your-github-username>/devbits"
Repository = "https://github.com/<your-github-username>/devbits"
Issues = "https://github.com/<your-github-username>/devbits/issues"

[project.scripts]
devbits = "devbits.cli:main"
clearcache = "devbits.scripts:clearcache"
images2video = "devbits.scripts:images2video"
video2images = "devbits.scripts:video2images"
images2gif = "devbits.scripts:images2gif"
video2gif = "devbits.scripts:video2gif"
clipvideo = "devbits.scripts:clipvideo"
resizevideo = "devbits.scripts:resizevideo"
image2ico = "devbits.scripts:image2ico"
resizeimage = "devbits.scripts:resizeimage"
batchimages = "devbits.scripts:batchimages"
checkimages = "devbits.scripts:checkimages"
contactsheet = "devbits.scripts:contactsheet"
tree = "devbits.scripts:tree"
size = "devbits.scripts:size"
renamefiles = "devbits.scripts:renamefiles"
samplefiles = "devbits.scripts:samplefiles"

[tool.setuptools.packages.find]
include = ["devbits*"]

[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"